compiler/testData/diagnostics/tests/unsignedTypes/callDefaultConstructorOfUnsignedType.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
val foo = <!INVISIBLE_REFERENCE!>UInt<!>()

/* GENERATED_FIR_TAGS: propertyDeclaration */
